# kivy_health

./: .gitignore  LICENSE  README.md  pyproject.toml
assets/: startscreen.xcf
kivy_health_app/: fix_my_world.kv  fix_my_world.py  heal.kv  main.py
