[tool.poetry]
name = "kivy_health_app"
version = "0.1.0"
description = ""
authors = ["Heiko Kulinna <Heikokulinna@gmx.de>"]
readme = "README.md"
packages = [{include = "kivy_health_app"}]

[tool.poetry.dependencies]
python = ">=3.8.1, <3.9"
Kivy = ">=2.0.0, <2.1.0"
pandas = "^1.5.2"
numpy = "^1.24.1"
kivymd = "^1.1.1"

[tool.poetry.group.dev.dependencies]
black = "^22.12.0"
flake8 = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
